# seq

./: CMakeLists.txt  README.md
matlab/: CMakeLists.txt
matlab/@Seq/: Seq.m
matlab/@Seq/private/: SeqLength.m  SeqRead.m
matlab/src/: SeqLength.mex.c  SeqRead.mex.c  prelude.h
src/: CMakeLists.txt  seq.c  seq.h
src/private/: prelude.h
test/: test.c
